# LazyMouseWizard

./: CMakeLists.txt  LICENSE  README.md  main.cpp
icon/: resource.h  resource.rc
module/: Module.h
module/impl/: humanInput.hpp
